Remove nth-of-type css for headers and add class

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div id="sitecontainer">
         <header class="parallax">
             <h1>About Harryhausen's</h1>
-            <img src="img/hhlogo.svg" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
+            <img src="img/hhlogo.svg" class="test" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
             <nav>
                 <h2>Page Navigation</h2>
                 <ul>
@@ -23,7 +23,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <img src="img/monster-maki-sunrise.svg" alt="Pretty Image" title="Pretty Image">
+            <img src="img/monster-maki-sunrise.svg" class="headerImage" alt="Pretty Image" title="Pretty Image">
         </header>
         <section id="sectioncontainer" class="clearfix">
             <h2>About Us</h2>
