--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
+            <img src="img/foodplate1.svg" class="headerImage" alt="Pretty Image" title="Pretty Image">
         </header>
         <section id="sectioncontainer">
             <h2>WHAT'S HAPPENING</h2>
