--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
+            <img src="img/foodplate1.svg" class="headerImage" alt="Pretty Image" title="Pretty Image">
         </header>
         <section id="sectioncontainer" class="menuContainer">
             <div class="clearfix">
