Add Email and Hours to contact page

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
                     <p>Anaheim, CA 92802</p>
                     <h4>CALL US</h4>
                     <p>(123)456-7890</p>
+                    <h4>EMAIL US</h4>
+                    <p><a href="mailto:lori.j.gibbons@gmail.com">harryhausens@monster.net</a></p>
+                    <h4>HOURS</h4>
+                    <p>Open 24 hours a day!</p>
                 </div>
                 <figure>
                     <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"/>
