Add 10 images as required

--- a/about.html
+++ b/about.html
@@ -43,6 +43,18 @@
                 <p>His second restaurant opened in Aoyama, Tokyo, Japan.</p>
                 <h3>March 2007</h3>
                 <p>“Gari,” his third restaurant, opened on the Upper Westside of Manhattan.</p>
+            <div>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+            </div>
             </article>
         </section>
         <footer id="footercontainer" class="clearfix">
