Add awards and images

--- a/about.html
+++ b/about.html
@@ -31,6 +31,10 @@
                 <main id="backstretch-image"></main>
                 <h3>OWNER CHEF</h3>
                 <p>Mashatoshi "Gooey" Sugio</p>
+                <h3>AWARDS</h3>
+                <p>2017 Best Restaurant in Movies</p>
+                <p>2016 Fan Favorite, Monster Maki Magazine</p>
+                <p>2005 Appeared in Monster's Inc.</p>
                 <h3>BIOGRAPHY</h3>
                 <p>Gooey became a Sushi Chef in Japan at the age of 19 because he was very drawn to the artistic and culinary world of sushi. For several years he worked as a Sushi Chef in Tokyo.</p>
                 <h3>June 1978</h3>
@@ -43,17 +47,18 @@
                 <p>His second restaurant opened in Aoyama, Tokyo, Japan.</p>
                 <h3>March 2007</h3>
                 <p>“Gari,” his third restaurant, opened on the Upper Westside of Manhattan.</p>
-            <div>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
-                  <img src="img/eyeball.svg" alt="Something" title="Something"/>
+            <h3>IMAGE GALLERY</h3>
+            <div class="image-gallery clearfix">
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/eyeball.svg" alt="Something" title="Something"/>
             </div>
             </article>
         </section>
