Insert 10 images for gallery

--- a/about.html
+++ b/about.html
@@ -49,16 +49,16 @@
                 <p>“Gari,” his third restaurant, opened on the Upper Westside of Manhattan.</p>
             <h3>IMAGE GALLERY</h3>
             <div class="image-gallery clearfix">
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
-              <img src="img/eyeball.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image1.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image8.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image3.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image10.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image5.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image6.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image7.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image2.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image9.svg" alt="Something" title="Something"/>
+              <img src="img/gallery/image4.svg" alt="Something" title="Something"/>
             </div>
             </article>
         </section>
