Edit some verbiage in contact page

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <h2>RESERVATIONS</h2>
                 <h4>RESERVE A TABLE</h4>
                 <p>FYI! We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
-                <p>Just call or fill out the form below to request our reservation services.</p>
+                <p>Just call or fill out the form to request our reservation services.</p>
             </article>
             <article id="contactForm">
                 <p class=""><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
