Correct Outline for contact page

--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,16 @@
             <img class="hide phoneWithFood" id="monsterPhonePicWithFood" src="img/monster-phone-rev01.svg" alt="Contact Harryhausen's" title="Contact harryhausen's">
         </header>
         <section id="sectioncontainer" class="clearfix">
+            <h2 class="hide">Contact Us Section</h2>
             <section id="map">
+                <h2 class="hide">Google Map to Find Us</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53046.31897214792!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500043270133" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63083.05994638205!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7da419065eb%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500041590981" width="1300" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
             <article id="contactUs" class="clearfix">
                 <h2>CONTACT</h2>
                 <div>
-                    <h4>EAT WITH US</h4>
+                    <h4>LOCATE US</h4>
                     <p>1313 Disneyland Drive</p>
                     <p>Anaheim, CA 92802</p>
                     <h4>CALL US</h4>
@@ -55,6 +57,7 @@
                 <p>Just call or fill out the form to request our reservation services.</p>
             </article>
             <article id="contactForm">
+                <h2 class="hide">Contact Form</h2>
                 <p class=""><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
                 <form>
                     <p><input class="" type="text" placeholder="Name" required name="Name"></p>
