--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53046.31897214792!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500043270133" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63083.05994638205!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7da419065eb%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500041590981" width="1300" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
-            <article id="contactUs" class="clearfix">
+            <article class="contactUs" class="clearfix">
                 <h2>CONTACT</h2>
                 <div>
                     <h4>LOCATE US</h4>
@@ -50,7 +50,7 @@
                     <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"/>
                 </figure>
             </article>
-            <article id="reservations">
+            <article class="reservations">
                 <h2>RESERVATIONS</h2>
                 <h4>RESERVE A TABLE</h4>
                 <p>FYI! We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
@@ -58,7 +58,7 @@
             </article>
             <article id="contactForm">
                 <h2 class="hide">Contact Form</h2>
-                <p class=""><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
+                <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
                 <form>
                     <p><input class="" type="text" placeholder="Name" required name="Name"></p>
                     <p><input class="" type="text" placeholder="How many monsters?" required name="People"></p>
