Change alt and title for footer images

--- a/about.html
+++ b/about.html
@@ -63,16 +63,16 @@
             </article>
         </section>
         <footer id="footercontainer" class="clearfix">
-            <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
-            <img src="img/eyeballchopsticks.svg" alt="" title="">
+            <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's Image" title="Dine At Harryhausen's Image" class="wiggler" >
+            <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's" title="Dine At Harryhausen's">
             <div id="address">
                 <p>123 Scary St.</p>
                 <p>Monsterville, CA 12346</p>
                 <p>999-867-5309</p>
                 <h2>Come eat scary with us!</h2>
             </div>
-            <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
-            <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+            <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's Image" title="Dine At Harryhausen's Image">
+            <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's Image" title="Dine At Harryhausen's Image" class="wiggler">
         </footer>
     </div>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
