Add Jquery plugin elevator that doesn't work

--- a/menu.html
+++ b/menu.html
@@ -11,9 +11,11 @@
     <!-- ToolTipster Plugin CSS -->
     <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min" />
+    <link rel="stylesheet" href="css/jquery-elevator.css">
 </head>
 <body>
     <div id="sitecontainer">
+        <div id="top" class="elevator"></div>
         <header class="parallax">
             <h1>Harryhausen's Sushi Restaurant</h1>
             <img src="img/hhlogo.svg" class="hhlogo" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
@@ -100,9 +102,11 @@
                 <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
             </footer>
         </section>
+        <div id="bottom" class="elevator"></div>
     </div>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+    <script src="js/jquery-elevator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
