add all imports to all pages(JS and CSS)

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat:400,700,800|Nosifer" rel="stylesheet">
+    <!-- ToolTipster Plugin CSS -->
+    <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min.css" />
+    <link rel="stylesheet" href="css/jquery.elevator.css">
 </head>
 <body>
     <div id="sitecontainer">
@@ -33,7 +37,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53046.31897214792!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500043270133" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63083.05994638205!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7da419065eb%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500041590981" width="1300" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </section>
-            <article class="contactUs" class="clearfix">
+            <article class="contactUs clearfix">
                 <h2>CONTACT</h2>
                 <div>
                     <h4>LOCATE US</h4>
@@ -67,7 +71,7 @@
                     <p><button class="button buttonappearance formbutton" type="submit">SEND MESSAGE</button></p>
                 </form>
             </article>
-        </div>
+        </section>
         <footer id="footercontainer" class="clearfix">
             <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
             <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's" title="Dine At Harryhausen's">
@@ -81,6 +85,10 @@
             <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's Image" title="Dine At Harryhausen's Image" class="wiggler">
         </footer>
     </div>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.js"></script>
+    <script src="js/jquery.elevator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
