--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat:400,700,800|Nosifer" rel="stylesheet">
+    <!-- ToolTipster Plugin CSS -->
+    <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min.css" />
+    <link rel="stylesheet" href="css/jquery.elevator.css">
 </head>
 <body>
     <div id="sitecontainer">
@@ -65,6 +69,10 @@
             <img src="img/eyeballchopsticks.svg" alt="Dine At Harryhausen's Image" title="Dine At Harryhausen's Image" class="wiggler">
         </footer>
     </div>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.js"></script>
+    <script src="js/jquery.elevator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
