--- a/menu.html
+++ b/menu.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat:400,700,800|Nosifer" rel="stylesheet">
     <!-- ToolTipster Plugin CSS -->
     <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min" />
-    <link rel="stylesheet" href="css/jquery-elevator.css">
+    <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min.css" />
+    <link rel="stylesheet" href="css/jquery.elevator.css">
 </head>
 <body>
     <div id="sitecontainer">
@@ -106,7 +106,8 @@
     </div>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
-    <script src="js/jquery-elevator.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.js"></script>
+    <script src="js/jquery.elevator.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
